--- a/ngram_and_similarity_search.ipynb
+++ b/ngram_and_similarity_search.ipynb
@@ -39,7 +39,7 @@
     "# initializing the embeddin model\n",
     "embeddings = AzureOpenAIEmbeddings(\n",
     "    model=\"ADA_RAG_DONO_DEMO\",\n",
-    "    api_key=\"35e177acfb054c28a1058071beb6e609\",\n",
+    "    api_key=\"your_api_key",\n",
     "    api_version=\"2024-02-01\",\n",
     "    azure_endpoint=\"https://dono-rag-demo-resource-instance.openai.azure.com\"\n",
     ")"
